# ergocub-behavior

bts/: config.json
bts/descriptions/: ergotree.xml
bts/src/: CMakeLists.txt
bts/src/actions/: do_response_action.cpp  do_response_action.h  robot_look_at_poi.cpp  robot_look_at_poi.h
bts/src/conditions/: robot_navigating.cpp  robot_navigating.h
